# travel-system-BUPT

./: .gitignore  CMakeLists.txt  README.md  config.ini  data_for_sites.txt  readme.md  school_map.qrc  travel-system.pro  ~$课程设计报告.docx  课程设计报告.docx
data/: comments.txt  data_for_sites.txt  geo39.960190,116.351455z=17.txt  map.osm  map_of_bupt.geojson  map_of_bupt.kml  test.py
database/: dump.sql  readme.md
docs/: Qt联动数据库.md  数据库表结构.md  数据结构课程设计自评表(2025).docx  数据设计.md  旅游日记相关页面原型设计.docx
docs/week_report/: ~$七、八周周报.docx  ~$五、六周周报.docx  第七、八周周报.docx  (+4 more)
document/: 各模块设计报告.docx  数据结构说明报告.docx  用户使用说明报告.docx
include/: campus_nav.h  diaryread.h  diarywindow.h  kmp_search.h  location_choose.h  login_widget.h  mainwindow.h  register_widget.h  route_plan.h  site_recommend.h  top_k_algorithm.h  writewidget.h
instance/: instance.cpp
source_code/: school_map.qrc
src/: campus_nav.cpp  database_connection.cpp  diaryread.cpp  diarywindow.cpp  haffuman.cpp  kmp_search.cpp  location_choose.cpp  login_widget.cpp  main.cpp  mainwindow.cpp  register_widget.cpp  route_plan.cpp  site_recommend.cpp  top_k_algorithm.cpp  top_k_sorting.cpp  writewidget.cpp
test/: test_route_plan.cpp
travel-system-QTproject/: database_connection.cpp  database_connection.h  diary_manegement.cpp  diary_manegement.h  diarywindow.cpp  diarywindow.h  diarywindow.ui  main.cpp  mainwindow.cpp  mainwindow.ui  travel-system.pro  writewidget.h
ui/: campus_nav.ui  diaryread.ui  diarywindow.ui  location_choose.ui  login_widget.ui  mainwindow.ui  register_widget.ui  site_recommend.ui  writewidget.ui
(+47 files in other folders)
